# RealEstateParser

./: .env.sample  .gitignore  config.py  docker-compose.yml  dump.sql  package-lock.json  pyproject.toml  wsgi.py
app/: __init__.py
app/controllers/: scraper.py
app/controllers/selenium/: __init__.py  bing_urls.py  cities_getter.py  contacts.py  graphic_object.py  urls.py
app/models/: __init__.py  association.py  assotiation.py  city.py  email.py  image.py  location.py  phone.py  site.py  url.py  user.py
app/static/css/: main.css
app/templates/: header.html  index.html  scraping.html
app/templates/auth/: login.html
app/views/: __init__.py  auth.py  scraper.py
migrations/versions/: 0c00b6e206ae_city_model.py  144711df0303_locations.py  2ed624ce13f4_init.py  836ad87e0352_init.py  869d35ddd173_init.py  96838228a875_.py  9cadb2673f5b_.py
tests/: test_download.py  test_scraping_page.py
